fixing alignment on options

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -389,13 +389,14 @@ section[class*="q-"] {
 	/*margin-top: 0.5em;*/
 	/*background-color: orange;*/
 	/*padding: 5em;*/
-	padding: 0.5em;
+	/*padding: 0.5em;*/
 	display: block;
 }
 
 .option {
-	width: 32%; /* fallback if calc doesnt work */
+	width: 31%; /* fallback if calc doesnt work */
 	width: calc(100%/3 - 1%);
+	min-height: 2.5em;
 	/*width: calc(100%/3);*/
 	margin-right: 1.32%;
 	margin-right: calc(1% + 1%/3);
